--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "雅诗TS网页项目模板",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "webpack --mode development --progress",
+    "build": "webpack --mode production --progress",
+    "serve": "http-server"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "http-server": "^14.1.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
