--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "release": "webpack --mode production --progress",
     "serve": "webpack-dev-server --mode development --progress --host 127.0.0.1 --port 9000 --open",
     "watch": "webpack --mode development --progress --watch",
-    "debug": "npm run watch & http-server"
+    "debug": "npm run watch & http-server",
+    "clean": "rm -rf dist/*"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,14 @@
   },
   "homepage": "https://github.com/miyabi-project/typescript-web-template#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
