--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,10 @@
   "rules": {
     "indent": [
       "warn",
-      2
+      2,
+      {
+        "SwitchCase": 1
+      }
     ],
     "linebreak-style": [
       "warn",
@@ -34,6 +37,9 @@
     "semi": [
       "warn",
       "always"
+    ],
+    "@typescript-eslint/no-explicit-any": [
+      "off"
     ]
   }
 }
