--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "typescript-web-template",
-  "version": "1.0.0",
-  "description": "雅诗TS网页项目模板",
+  "version": "2.0.0",
+  "description": "雅诗 TypeScript 网页项目模板",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "npm run lint && webpack --mode development --progress",
-    "release": "npm run clean && npm run lint && webpack --mode production --progress",
-    "serve": "npm run clean && npm run build && webpack-dev-server --mode development --progress --host 127.0.0.1 --port 9000 --open",
-    "watch": "webpack --mode development --progress --watch",
+    "build": "npm run lint && webpack --mode development",
+    "release": "npm run clean && npm run lint && webpack --mode production",
+    "serve": "npm run clean && npm run build && webpack-dev-server --mode development --host 127.0.0.1 --open",
+    "watch": "webpack --mode development --watch",
     "debug": "npm run watch & http-server",
-    "clean": "rm -rf dist/*",
+    "clean": "rm -f index.html && rm -rf dist/*",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --ignore-pattern *.d.ts"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.1",
