支持从一个网页模板生成多个语言的网页

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "clean": "rimraf dist",
+    "lint": "eslint src/**/*.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
