--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "web2",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
+  "name": "typescript-web-template",
+  "version": "3.1.0",
+  "type": "module",
+  "main": "main.js",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "clean": "rimraf dist",
-    "lint": "eslint src/**/*.js",
-    "test": "jest"
+    "lint": "eslint src --ext .ts,.js --max-warnings=0",
+    "lint:fix": "eslint src --ext .ts,.js --fix",
+    "electron": "electron .",
+    "dev:electron": "node scripts/dev-electron.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "electron": "^35.1.4",
+    "eslint": "^9.24.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.11",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.7.3",
-    "webpack": "^5.97.1",
+    "terser-webpack-plugin": "^5.3.14",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
+    "wait-on": "^8.0.3",
+    "webpack": "^5.99.5",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
+    "webpack-dev-server": "^5.2.1",
     "webpackbar": "^7.0.0"
   }
 }
