--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^7.1.2",
     "electron": "^35.1.4",
     "eslint": "^9.24.0",
+    "eslint-config-google": "^0.14.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
