--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "sourceMap": true,
         "outDir": "./dist",
         "module": "ESNext",
         "target": "ES5",
